[metadata]
name = pipeline
description = "A Luigi-like Dask-based interactive pipeline framework."
url = "https://github.com/maurosilber/pipeline"
author = "Mauro Silberberg"
author_email = "maurosilber@gmail.com"
license = "MIT"
long_description = file: README.rst
keywords = 
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = pipeline
python_requires = >=3.8
install_requires = 
    cloudpickle
    dask
    fsspec
    zstandard
include_package_data = True

[options.extras_require]
dev = 
    pytest
    pre-commit

[bdist_wheel]
universal = 1

[flake8]
# Black
max-line-length = 88
extend-ignore = E203
