[metadata]
name = dask_checkpoint
description = Customizable caching of Dask-delayed.
url = https://github.com/maurosilber/dask-checkpoint
author = Mauro Silberberg
author_email = maurosilber@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
keywords = dask, cache, caching, checkpoint

[options]
packages = dask_checkpoint
python_requires = >=3.7
install_requires = 
    cloudpickle
    dask
    fsspec
    zstandard
    typing_extensions;python_version<"3.10"
include_package_data = True

[options.extras_require]
dev = 
    hypothesis
    pre-commit
    pytest
    serialize
    tox

[bdist_wheel]
universal = 1

[flake8]
# Black
max-line-length = 88
extend-ignore = E203
